--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Crowd DJ</title>
-</head>
-<body>
-  hi
-</body>
-</html>
+---
+layout: default
+title: Crowd
+---
+
